# MordernCPP

./: README.md
homework/homework1/task_1/: commands.sh
homework/homework1/task_2/: CMakeLists.txt  README.md  build.sh  install.sh
homework/homework1/task_2/src/: CMakeLists.txt  main.cpp
homework/homework2/task_1/: CMakeLists.txt  LISENSE  README.md
homework/homework2/task_1/include/: guess.hpp
homework/homework2/task_1/src/: CMakeLists.txt  guess.cpp  main.cpp
homework/homework2/task_2/: CMakeLists.txt  README.md
homework/homework2/task_2/include/: calculation.hpp
homework/homework2/task_2/src/: CMakeLists.txt  calculation.cpp  main.cpp
test/: ProgramInputPara.cpp  a.out  stringstream_test.cpp
test/fmt_test/: .gitignore  CMakeLists.txt  README.md
test/fmt_test/include/: MySum.hpp
test/fmt_test/src/: CMakeLists.txt  MySum.cpp  main.cpp
